tests/baselines/reference/thisTypeInTypePredicate.errors.txt
thisTypeInTypePredicate.ts(2,32): error TS99999: Annotated function was also inferred to be a type guard


==== thisTypeInTypePredicate.ts (1 errors) ====
    declare function filter<S>(f: (this: void, x: any) => x is S): S[];
    const numbers = filter<number>((x): x is number => 'number' == typeof x)
                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
    